# map_builder

./: .gitignore  README.md  codex_instructions1.txt  codex_instructions2.txt  package.xml  setup.py
map_builder/: __init__.py  mesh_map_cli.py  mesh_map_pipeline.py  mesh_processing.py  mesh_section_map_cli.py  mesh_slab_map_cli.py  occupancy_map.py  pcd_filter.py  pcd_filter_cli.py  pcd_io.py  pcd_preproc.py  pcd_preproc_cli.py  sim_room.py  test_support.py
test_output/: metashape_mesh_floor_free.npy  metashape_mesh_floor_free.yaml  metashape_mesh_section.npy  metashape_mesh_section.yaml  metashape_mesh_slab.npy  metashape_mesh_slab.yaml  sim_cli_section.npy  sim_cli_section.yaml  sim_cli_slab.yaml  sim_room_mesh_floor_free.npy  sim_room_mesh_floor_free.yaml  sim_room_mesh_section.npy  sim_room_mesh_section.yaml  sim_room_mesh_slab.yaml  sim_room_pointcloud_filtered.ply  sim_room_pointcloud_preproc.ply
tests/: test_mesh_floor_free.py  test_mesh_rasterization.py  test_mesh_section.py  test_mesh_slab.py  test_pcd_filter.py  test_pcd_preproc.py  test_sim_fixtures.py  test_sim_mesh_floor_free.py  test_sim_mesh_section.py  test_sim_mesh_slab.py  test_sim_pcd_filter.py  test_sim_pcd_preproc.py
